# beacon

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/ai/: prompts.py  schemas.py  service.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: finding.py
backend/app/modules/repository/: analyzer.py  api.py  clone.py  info.py  service.py
backend/app/modules/scanner/: aggregator.py  base.py  enrich.py  manager.py  models.py  normalizer.py  orchestrator.py  registry.py  service.py
backend/app/modules/scanner/tools/: bandit.py  gitleaks.py  semgrep.py
backend/app/repository/: api.py  clone.py  parser.py
backend/app/scanner/: manager.py  normalizer.py  summary.py
backend/app/scanner/tools/: bandit.py  gitleaks.py  semgrep.py  trivy.py
backend/app/schemas/: github.py
backend/app/services/: github_service.py
backend/app/services/github/: __init__.py
backend/app/services/scanner/: manager.py  normalizer.py
backend/app/services/scanner/tools/: semgrep.py
backend/app/shared/: constants.py  job_store.py  models.py
backend/app/shared/models/: repository.py
backend/tests/: test_github.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: RepoInput.tsx
frontend/src/services/: api.ts
