[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "gitpython>=3.1.51",
    "google-genai>=2.11.0",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langgraph>=1.2.9",
    "pgvector>=0.5.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "reportlab>=5.0.0",
    "semgrep>=1.170.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
